--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     margin:0;
 }
 body{
-        font-family: "Young Serif", serif;     
+        font-family: "Young Serif", serif;
+    background-color:orange;
 }
 .container{
     padding:50px;  
@@ -24,6 +25,10 @@ body{
     display:inline-block;
     margin-top:10px;
 }
+.section-one__Contact:hover{
+    background-color:brown;
+    color:blue;
+}
 .section-one__Name{
     font-size:60px;
 }
@@ -38,8 +43,8 @@ body{
     margin-top:10px; 
 }
 .section-five{
-    background-color:black;
-    color:white;
+    background-color:rgb(238,255,85);
+    color:black;
     padding:20px;
 }
 .section-five__Title a{
@@ -49,22 +54,27 @@ body{
      list-style: none;
 }
 .section-three{
-    background-color:#6462fd;
+    background-color:aquamarine;
     color:black;
     padding:20px;
-    display:inline-block;
+    display:block;
     height:200px;
     border-radius:10px;
     vertical-align:top;
 }
 .section-four{
-    background-color:#fe5717;
+    background-color:rgb(34,178,171);
     color:black;
     padding:20px;
-    display:inline-block;
+    display:block;
     height:200px;
     border-radius:10px;
     vertical-align:top;
+}
+.box-image{
+    border:5px solid palevioletred;
+    width:50%;
+    height:50%;
 }
 .Contact-Form{
     margin-top:20px;
