--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body{
     background-color:rgb(34, 178, 171);
     color:black;
     padding:20px;
-    display:block;;
+    display:block;
     border-radius:10px;  
 }
 .box-image{
